--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="english">
 <head>
-  <!-- Design by foolishdeveloper.com -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glassmorphism login Form </title>
  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-    <!--Stylesheet-->
-    <style media="screen">
+   
+        <style>
       *,
 *:before,
 *:after{
@@ -16,8 +17,15 @@
     margin: 0;
     box-sizing: border-box;
 }
+html, body {
+    width: 100%;
+    overflow-x: hidden;
+}
 body{
     background-color: #080710;
+}
+h4{
+    padding-top: 0px;
 }
 .background{
     width: 430px;
@@ -28,10 +36,17 @@ body{
     top: 50%;
 }
 .background .shape{
-    height: 200px;
-    width: 200px;
+    height: 188px;
+    width: 188px;
     position: absolute;
     border-radius: 50%;
+}
+@media (max-width:400px) {
+    .background .shape{
+        height: 130px;
+        width: 130px;
+    }
+    
 }
 .shape:first-child{
     background: linear-gradient(
@@ -39,8 +54,8 @@ body{
         #143a99,
         #23a2f6
     );
-    left: -80px;
-    top: -80px;
+    left: -75px;
+    top: -65px;
 }
 .shape:last-child{
     background: linear-gradient(
@@ -48,22 +63,48 @@ body{
         #ff512f,
         #f09819
     );
-    right: -30px;
-    bottom: -80px;
+    right: -45px;
+    bottom: -70px;
+}
+@media (max-width:400px) {
+    .shape:first-child {
+    top: -63px;
+    left: 20px;
+    width: 120px;
+    height: 120px;
+  }
+
+  .shape:last-child {
+    bottom: 15px;
+    right: 20px;
+    width: 120px;
+    height: 120px;
+  }
 }
 form{
-    height: 520px;
-    width: 400px;
+    height: 480px;
+    width: 380px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
     transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
+    margin-top: 330px;
+    margin-left: 655px;
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255,0.1);
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
-    padding: 50px 35px;
+    padding: 0 35px;
+}
+@media (max-width:400px) {
+   form
+    {
+        width: 295px;
+        height: 450px;
+        padding: 0px 15px;
+        margin-top: 285px;
+        margin-left: 195px;
+    }
+
 }
 form *{
     font-family: 'Poppins',sans-serif;
@@ -75,19 +116,19 @@ form *{
 form h3{
     font-size: 32px;
     font-weight: 500;
-    line-height: 42px;
     text-align: center;
+    padding-top: 30px;
 }
 
 label{
     display: block;
-    margin-top: 30px;
+    margin-top: 20px;
     font-size: 16px;
     font-weight: 500;
 }
 input{
     display: block;
-    height: 50px;
+    height: 45px;
     width: 100%;
     background-color: rgba(255,255,255,0.07);
     border-radius: 3px;
@@ -96,19 +137,31 @@ input{
     font-size: 14px;
     font-weight: 300;
 }
+@media (max-width:400px) {
+    label{
+        margin-top: 20px;
+    }
+}
 ::placeholder{
     color: #e5e5e5;
 }
 button{
-    margin-top: 50px;
+    margin-top: 40px;
     width: 100%;
     background-color: #ffffff;
     color: #080710;
-    padding: 15px 0;
+    padding: 12px 0;
     font-size: 18px;
     font-weight: 600;
     border-radius: 5px;
     cursor: pointer;
+}
+@media (max-width:400px) {
+    button{
+        margin-top: 30px;
+        padding: 10px 0 ;
+        
+    }
 }
 button:hover{
     background-color:#080710 ;
@@ -119,26 +172,53 @@ button:hover{
   margin-top: 30px;
   display: flex;
   cursor: pointer;
+  justify-content: space-between;
+}
+@media (max-width:400px) {
+    .social{
+        margin-top: 20px;
+    }
 }
 .social div{
   width: 150px;
   border-radius: 3px;
-  padding: 5px 10px 10px 5px;
+  padding: 9px 10px 10px 5px;
   background-color: rgba(255,255,255,0.27);
   color: #eaf0fb;
   text-align: center;
   cursor: pointer;
+}
+@media (max-width:400px) {
+    .social div{
+        width: 160px;
+        padding-top: 2px 8px 8px 4px;
+    }
 }
 .social div:hover{
   background-color: rgba(255,255,255,0.47);
   cursor: pointer;
 }
 .social .fb{
-  margin-left: 25px;
+  margin-left: 20px;
 }
-.social i{
-  margin-right: 4px;
+@media (max-width: 400px) {
+  .social {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+  }
+
+  .social div {
+    flex: 1;
+    padding: 10px 0;
+    margin-left: 0 !important;
+    text-align: center;
+  }
+
+ 
 }
+
+
 
     </style>
 </head>
