--- a/index.html
+++ b/index.html
@@ -81,30 +81,27 @@ h4{
     height: 120px;
   }
 }
-form{
+
+form {
     height: 480px;
     width: 380px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
-    transform: translate(-50%,-50%);
-    margin-top: 330px;
-    margin-left: 655px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255,0.1);
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 0 35px;
 }
-@media (max-width:400px) {
-   form
-    {
+@media (max-width: 400px) {
+    form {
         width: 295px;
         height: 450px;
         padding: 0px 15px;
-        margin-top: 285px;
-        margin-left: 195px;
     }
-
 }
 form *{
     font-family: 'Poppins',sans-serif;
