--- a/index.html
+++ b/index.html
@@ -81,15 +81,14 @@ h4{
     height: 120px;
   }
 }
-
-form {
+form{
     height: 480px;
     width: 380px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
-    top: 50%;
+    transform: translate(-50%,-50%);
     left: 50%;
-    transform: translate(-50%, -50%);
+    top: 50%;
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255,0.1);
@@ -101,6 +100,8 @@ form {
         width: 295px;
         height: 450px;
         padding: 0px 15px;
+        top: 44%;
+        left:50%;
     }
 }
 form *{
